--- a/src/app/(afterLogin)/mainpage/_component/chatroom.module.css
+++ b/src/app/(afterLogin)/mainpage/_component/chatroom.module.css
@@ -137,9 +137,9 @@
   flex-shrink: 0;
 }
 
-.avatar {
-  width: 52px;
-  height: 52px;
+.avatarImage {
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: #555;
   display: flex;
