자료실 api 연결 및 사진 자료 변경

--- a/src/app/(afterLogin)/mainpage/_component/_assignment/AssignmentDetail.module.css
+++ b/src/app/(afterLogin)/mainpage/_component/_assignment/AssignmentDetail.module.css
@@ -21,6 +21,18 @@
   color: #f7f7f7;
 }
 
+.avatarImage {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.memberAvatar {
+  position: relative;
+  overflow: hidden;
+}
+
 .statusBadge {
   font-size: 11px;
   font-weight: 500;
