--- a/src/app/(afterLogin)/mainpage/_component/_assignment/AssignmentList.module.css
+++ b/src/app/(afterLogin)/mainpage/_component/_assignment/AssignmentList.module.css
@@ -38,6 +38,18 @@
   position: relative;
 }
 
+.avatarImage {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.memberAvatar {
+  position: relative;
+  overflow: hidden;
+}
+
 .assignmentCard:hover {
   background-color: #333;
   border-color: #555;
