--- a/src/app/(afterLogin)/mainpage/_component/actionbar.module.css
+++ b/src/app/(afterLogin)/mainpage/_component/actionbar.module.css
@@ -99,9 +99,16 @@
   border-radius: 0 12px;
 }
 
+.roomImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50px;
+}
+
 .roomImg {
-  width: 58px;
-  height: 58px;
+  width: 48px;
+  height: 48px;
   border-radius: 50px;
   background-color: #838383;
 }
