--- a/src/app/(afterLogin)/mainpage/_component/chatmessage.module.css
+++ b/src/app/(afterLogin)/mainpage/_component/chatmessage.module.css
@@ -35,8 +35,8 @@
 }
 
 .senderAvatar {
-  width: 32px;
-  height: 32px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   background: #555;
   display: flex;
@@ -47,6 +47,7 @@
   font-weight: 600;
   flex-shrink: 0;
   margin-bottom: 2px;
+  overflow: hidden;
 }
 
 /* 메시지 콘텐츠 */
