--- a/src/app/(afterLogin)/mainpage/_component/createmission.module.css
+++ b/src/app/(afterLogin)/mainpage/_component/createmission.module.css
@@ -162,6 +162,8 @@
   justify-content: center;
   font-size: 20px;
   flex-shrink: 0;
+
+  overflow: hidden; /* 이미지가 둥근 테두리 밖으로 나가지 않도록 */
 }
 
 .memberName {
